handle some hbs files

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -7,7 +7,10 @@
     <body>
         <div class="main-content">
             {{>header}}
-             <img class="portriat" src="img/1.jpg" alt="">
+             <img class="portriat" src="https://media.istockphoto.com/id/1225639749/vector/weather-icons-set.jpg?s=612x612&w=0&k=20&c=7EbuC4dBLWOEWMBiJSSDZCyIfNAAnn3K0Gzm-n1AaXI=" alt="">
+             <p>
+                Weather App is a simple and user-friendly web application that provides current weather information for various locations. Our goal is to make it easy for users to access up-to-date weather data and stay informed about the weather conditions in their area.
+            </p>
         </div>
         
         {{>footer}}
