--- a/templates/views/help.hbs
+++ b/templates/views/help.hbs
@@ -7,8 +7,17 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <h3>Search Weather</h3>
+                <p>
+                    To search for weather information for a specific location, follow these steps:
+                </p>
+                <ol>
+                    <li>On the home page, enter the city name or zip code in the search input field.</li>
+                    <li>Click the "Search" button or press Enter.</li>
+                    <li>The weather information for the specified location will be displayed.</li>
+                </ol>
         </div>
-        
+
         {{>footer}}
     </body>
 </html>
